--- a/roles/desktop/templates/.config/i3/config.j2
+++ b/roles/desktop/templates/.config/i3/config.j2
@@ -158,8 +158,8 @@ bindsym $mod+Pause mode "$mode_system"
 # bindsym XF86AudioPrev exec playerctl previous
 
 # Increase and decrease sound volume
-# bindsym XF86AudioRaiseVolume exec amixer -D pulse set Master 5%+
-# bindsym XF86AudioLowerVolume exec amixer -D pulse set Master 5%-
+bindsym XF86AudioRaiseVolume exec amixer -D pulse set Master 5%+
+bindsym XF86AudioLowerVolume exec amixer -D pulse set Master 5%-
 
 # Mute sound
 # bindsym XF86AudioMute exec amixer -D pulse set Master 1+ toggle
