--- a/roles/desktop/templates/.bash_profile.j2
+++ b/roles/desktop/templates/.bash_profile.j2
@@ -13,13 +13,18 @@ export GOPRIVATE=gitlab.com*
 
 # kubectl
 ##TODO: VAR FOR KUBECONFIG
-export KUBECONFIG=$HOME/.kube/config:$HOME/.k3d/kubeconfig-k3s-default.yaml:$HOME/.kube/tibia-cardinal:$HOME/.kube/new-tibia-cardinal
+export KUBECONFIG=$HOME/.kube/config:$HOME/.k3d/kubeconfig-k3s-default.yaml:$HOME/.kube/lennart
 
 # kube_ps1
 export KUBE_PS1_SYMBOL_ENABLE=false
 export KUBE_PS1_NS_ENABLE=true
 export KUBE_PS1_PREFIX=' ['
 export KUBE_PS1_SUFFIX=]
+
+##TODO: FOREACH LOOP ON VAR
+export __GL_SYNC_TO_VBLANK=1
+export __GL_SYNC_DISPLAY_DEVICE=HDMI-0
+export VDPAU_NVIDIA_SYNC_DISPLAY_DEVICE=HDMI-0
 
 if systemctl -q is-active graphical.target && [[ ! $DISPLAY && $XDG_VTNR -eq 1 ]]; then
   exec startx
