--- a/roles/desktop/templates/.bash_aliases.j2
+++ b/roles/desktop/templates/.bash_aliases.j2
@@ -10,6 +10,10 @@ alias ssh='TERM=xterm-256color ssh'
 alias encode='base64_encode'
 alias decode='base64_decode'
 
+{% if bash_alias_extra != '' %}
+{{ bash_alias_extra }}
+{% endif %}
+
 alias gorunenv='env `cat $(find . -name .env) | xargs` go run ./...'
 alias gorun='go run ./...'
 alias gobuild='CGO_ENABLED=0 GOOS=linux go build'
