set locale in bash_profile
add hey and telnet utils
added ldapsearch on code

Resolves: master

--- a/roles/desktop/templates/.bash_profile.j2
+++ b/roles/desktop/templates/.bash_profile.j2
@@ -1,5 +1,8 @@
 #!/bin/sh
 
+export LC_TIME=sv_SE.UTF-8
+export LC_MEASUREMENT=sv_SE.UTF-8
+
 # git custom
 export PATH=$PATH:$HOME/git/commands
 export EDITOR=/usr/bin/vim
