--- a/roles/desktop/templates/.config/i3/config.j2
+++ b/roles/desktop/templates/.config/i3/config.j2
@@ -168,6 +168,8 @@ bindsym XF86AudioLowerVolume exec amixer -D pulse set Master 5%-
 # Mute sound
 # bindsym XF86AudioMute exec amixer -D pulse set Master 1+ toggle
 
+# for_window [instance="origin.exe"] floating enable
+# for_window [title="Origin"] floating enable
 for_window [class="Yad"] floating enable
 
 # Statusbar
