--- a/roles/desktop/templates/.Xresources.j2
+++ b/roles/desktop/templates/.Xresources.j2
@@ -31,6 +31,16 @@ URxvt.matcher.button: 1
 URxvt*font: xft:JetBrains Mono:pixelsize=12:antialias=true:hinting=true
 URxvt*boldFont: xft:JetBrains Mono:style=bold:pixelsize=12:antialias=true:hinting=true
 
+! do not scroll with output
+URxvt*scrollTtyOutput: false
+
+! scroll in relation to buffer (with mouse scroll or Shift+Page Up)
+URxvt*scrollWithBuffer: true
+
+! scroll back to the bottom on keypress
+URxvt*scrollTtyKeypress: true
+
+
 ! Disable ISO 14755 unicode input so we can use Ctrl-Shift bindings
 URxvt.iso14755:        false
 URxvt.iso14755_52:     false
