--- a/roles/desktop/templates/.bashrc.j2
+++ b/roles/desktop/templates/.bashrc.j2
@@ -4,9 +4,10 @@
 
 ## Bash completitions/keybindings/aliases
 [ -r /usr/share/bash-completion/bash_completion ] && . /usr/share/bash-completion/bash_completion
-[ -r /usr/share/git/completion/git-prompt.sh ] && . /usr/share/git/completion/git-prompt.sh
+# [ -r /usr/share/git/completion/git-prompt.sh ] && . /usr/share/git/completion/git-prompt.sh
 [ -r /opt/kube-ps1/kube-ps1.sh ] && . /opt/kube-ps1/kube-ps1.sh
-[ -r /usr/share/fzf/key-bindings.bash ] && . /usr/share/fzf/key-bindings.bash
+# [ -r /usr/share/fzf/key-bindings.bash ] && . /usr/share/fzf/key-bindings.bash
+[ -r /usr/share/doc/fzf/examples/key-bindings.bash ] && . /usr/share/doc/fzf/examples/key-bindings.bash
 [ -f $HOME/.bash_aliases ] && . $HOME/.bash_aliases
 
 
@@ -43,11 +44,12 @@ RESET=$(tput sgr0)
 export PS1='\[$GREEN\]\u\[$BLUE\]@\h\[$RED\]$(__git_ps1)\[$RESET\]$(kube_ps1) \[$CYAN\]\w \n\[$WHITE\]\$\[$RESET\] '
 
 # add ssh key unlock per login
-if [ ! -S $HOME/.ssh/ssh_auth_sock ]; then
-  eval `ssh-agent`
+if [ ! -S $HOME/.ssh/ssh_auth_sock ] && [ "$SSH_AUTH_SOCK" == "" ]; then
+  eval `ssh-agent -s`
   ln -sf "$SSH_AUTH_SOCK" $HOME/.ssh/ssh_auth_sock
 fi
 
-
-export SSH_AUTH_SOCK=$HOME/.ssh/ssh_auth_sock
-ssh-add -l > /dev/null || ssh-add
+if [ -S $HOME/.ssh/ssh_auth_sock ]; then
+  export SSH_AUTH_SOCK=$HOME/.ssh/ssh_auth_sock
+  ssh-add -l > /dev/null || ssh-add
+fi
