fix prepare-commit-msg to be bash instead of sh
add k3d download to code
fix kubectx not working with multiple files

Resolves: ubuntu

--- a/roles/desktop/templates/.profile.j2
+++ b/roles/desktop/templates/.profile.j2
@@ -18,7 +18,7 @@ export GO111MODULE=on
 {% endif %}
 
 # kubectl
-export KUBECONFIG=$HOME/.kube/config:$HOME/.k3d/kubeconfig-k3s-default.yaml
+export KUBECONFIG=$HOME/.kube/config
 
 # kube_ps1
 export KUBE_PS1_SYMBOL_ENABLE=false
